# empiris_load_gen

./: .env.example  .gitignore  Cargo.toml  build.rs  justfile.example
proto/: math.proto
src/: comm.rs  gen.rs  main.rs  thread.rs
