[package]
name = "load_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
clap = { version = "4.5.19", features = ["derive"] }
prost = "0.13.3"
tonic = "0.12.3"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
logger_utc = "0.2.0"

[build-dependencies]
tonic-build = "0.12.3"

