[package]
name = "load_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.9.0-alpha.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4.22"
